# avrs

./: .hgflow  .hgignore  AUTHORS  CMakeLists.txt  Makefile  README.md  avrs.doxyfile  loadmod  run  unloadmod
doc/: dxflib-installation-guide.md  rtai-install.md  rtai-installation-guide.md  stk-installation-guide.md
etc/: tracker_sim_constant.conf  wiimote_tracker_points
include/: airabsorption.hpp  avrsexception.hpp  common.hpp  configuration.hpp  convolver.hpp  dxfreader.hpp  fdn.hpp  headfilter.hpp  hrtfconvolver.hpp  input.hpp  ism.hpp  listener.hpp  player.hpp  room.hpp  soundsource.hpp  surface.hpp  system.hpp  version.hpp.in  virtualenvironment.hpp  virtualsource.hpp
include/tracker/: trackerbase.hpp
include/tracker/sim/: trackersim.hpp
include/tracker/wiimote/: posit.hpp  svd.h  trackerwiimote.hpp  wiimote.hpp
include/utils/: configfilereader.hpp  math.hpp  rttools.hpp  timer.hpp  timerbase.hpp  timercpu.hpp  timerrtai.hpp  tokenizer.hpp  tree.hpp
src/: CMakeLists.txt  Doxyfile  airabsorption.cpp  avrs.doxyfile  avrsexception.hpp  common.hpp  configfilereader.hpp  configuration.cpp  configuration.hpp  convolver.cpp  convolver.hpp  dxfreader.cpp  dxfreader.hpp  fdn.cpp  fdn.hpp  headfilter.cpp  headfilter.hpp  hrtfconvolver.cpp  hrtfconvolver.hpp  input.cpp  input.hpp  ism.cpp  listener.cpp  listener.hpp  main.cpp  math.hpp  mathtools.hpp  player.cpp  player.hpp  posit.cpp  room.cpp  rttools.cpp  rttools.hpp  soundsource.cpp  soundsource.hpp  surface.cpp  surface.hpp  system.cpp  system.hpp  timer.cpp  (+16 more)
src/tracker/: CMakeLists.txt
src/tracker/sim/: CMakeLists.txt  trackersim.cpp
src/tracker/wiimote/: CMakeLists.txt  posit.cpp  svd.c  trackerwiimote.cpp  wiimote.cpp
src/utils/: CMakeLists.txt  configfilereader.cpp  rttools.cpp  timer.cpp  timerbase.cpp  timercpu.cpp  timerrtai.cpp  tokenizer.cpp
tools/avrsconfig/: avrsconfig.m  init.m  materiales_db.mat
tools/avrsconfig/dxf/: Aula311-det.dxf
tools/avrsconfig/gui/: guiMain.fig  guiMain.m  guiMaterial.fig  guiMaterial.m
tools/avrsconfig/src/: cargar_recinto.m  crear_conf.m  dibujarVector.m  extraer_nombre_archivo.m  extraer_ruta_archivo.m  funcionERB.m  save_conf.m  save_filtro_sup.m  sortcell.m  speed_sound.m  vector2angulos.m
tools/avrsconfig/src/@Fuente/: Fuente.m  apuntarReceptor.m  calcTiempo.m  calcTiempoDirecta.m  dibujar.m  get.m  set.m  vectorOrientacion.m
tools/avrsconfig/src/@FuenteImagen/: FuenteImagen.m  calcAzimuth.m  calcElevation.m  calcTiempo.m  calcTiempoDirecta.m  get.m  set.m
tools/avrsconfig/src/@FuentesImagenes/: FuentesImagenes.m  calcularFI.m  calcularFI2.m  dibujarReflexion.m  get.m  getVisibles.m  reflectograma.m
tools/avrsconfig/src/@FuentesImagenes/private/: visibilidad1.m  visibilidad2.m
tools/avrsconfig/src/@MaterialArq/: MaterialArq.m  calcularFiltroAire.m  calcularFiltroMat.m  coefNE.m  get.m
tools/avrsconfig/src/@MaterialesArq/: MaterialesArq.m  agregarMaterial.m  borrarMaterial.m  borrarMateriales.m  cargarMateriales.m  get.m  getNombres.m  guardarMateriales.m
tools/avrsconfig/src/@Plano/: Plano.m  area3D.m  centro.m  coeficientes.m  dibujar.m  dibujarNormal.m  display.m  distanciaOrigen.m  estaDentro.m  get.m  normal.m  pintar.m  set.m
tools/avrsconfig/src/@Plano/private/: dibujarVector.m  verticesCorrectos.m
tools/avrsconfig/src/@Receptor/: Receptor.m  apuntarFuente.m  calcularNariz.m  get.m  set.m  vectorOrientacion.m
tools/avrsconfig/src/@Recinto/: Recinto.m  areaTotal.m  dibujar.asv  dibujar.m  get.m  max.m  min.m  pintarPlano.m  set.m
tools/avrsconfig/src/@Recinto/private/: leerDXF.m
